fix(asm): 修复 ASM ClassWriter 生成 StackMapTable 配置
- 将 ASM_FLAGS 从 COMPUTE_MAXS 切换为 COMPUTE_FRAMES，启用 StackMapTable 生成
- 说明 COMPUTE_FRAMES 在 ASM 9.8 存在触发 NegativeArraySizeException 的已知问题
- 说明当前采取 visitMaxs 设为 0 让 ASM 自动计算帧信息的策略

refactor(reader): 废弃 ObjectReader 类，迁移至 BeanReader

- 标记 ObjectReader 为 @Deprecated 并补充废弃说明
- 清理相关注释，明确后续将统一 Bean 反序列化流程删除 ObjectReader

docs(config): 修正字段命名策略配置描述错误

- 将配置中描述的 LOWER_UNDERSCORE 更正为 LOWER_CASE